Manage user's credit
